@@ -17,6 +17,7 @@
 package com.rometools.rome.feed.impl;
 
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
@@ -37,7 +38,7 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Provides deep <b>Bean</b> clonning support.
- * <p>
+
  * It works on all read/write properties, recursively. It support all primitive types, Strings,
  * Collections, Cloneable objects and multi-dimensional arrays of any of them.
  */
@@ -66,9 +67,10 @@ public class CloneableBean {
 
     /**
      * Makes a deep bean clone of the object passed in the constructor.
-     * <p>
      * To be used by classes using CloneableBean in a delegation pattern,
-     *
+     * 
+     * @param obj the object to be cloned
+     * @param ignoreProperties properties ignore in clone phase
      * @return a clone of the object bean.
      * @throws CloneNotSupportedException thrown if the object bean could not be cloned.
      *
@@ -79,7 +81,7 @@ public class CloneableBean {
 
         try {
 
-            final Object clonedBean = clazz.newInstance();
+            final Object clonedBean = clazz.getDeclaredConstructor().newInstance();
 
             final List<PropertyDescriptor> propertyDescriptors = BeanIntrospector.getPropertyDescriptorsWithGettersAndSetters(clazz);
             for (final PropertyDescriptor propertyDescriptor : propertyDescriptors) {
@@ -115,7 +117,6 @@ public class CloneableBean {
 
     }
 
-    @SuppressWarnings("unchecked")
     private static <T> T doClone(T value) throws Exception {
         if (value != null) {
             final Class<?> vClass = value.getClass();
@@ -124,16 +125,23 @@ public class CloneableBean {
             } else if (value instanceof Collection) {
                 value = (T) cloneCollection((Collection<Object>) value);
             } else if (value instanceof Map) {
-                value = (T) cloneMap((Map<Object, Object>) value);
+                value = (T) cloneMap((Map<Object,Object>) value);
             } else if (isBasicType(vClass)) {
                 // NOTHING SPECIAL TO DO HERE, THEY ARE INMUTABLE
             } else if (value instanceof Cloneable) {
-                final Method cloneMethod = vClass.getMethod("clone", NO_PARAMS_DEF);
-                if (Modifier.isPublic(cloneMethod.getModifiers())) {
-                    value = (T) cloneMethod.invoke(value, NO_PARAMS);
-                } else {
-                    throw new CloneNotSupportedException("Cannot clone a " + value.getClass() + " object, clone() is not public");
-                }
+//            	boolean found = false;
+//            	final Method[] methods = vClass.getMethods();
+//            	for (int i = 0; !found && i < methods.length; i++) {
+//            		if (methods[i].getName().indexOf("cloneNode") >= 0) {
+//            			found = true;
+//            			final Class<?>[] booleanClass = new Class[] { boolean.class };
+//            			final Object[] booleanParam = new Object[] { true };
+//            			value = executeCloneMethod(value, "cloneNode", booleanClass, booleanParam, vClass);
+//            		}
+//            	}
+//            	if (!found) {
+            		value = executeCloneMethod(value, "clone", NO_PARAMS_DEF, NO_PARAMS, vClass);
+//            	}
             } else {
                 throw new CloneNotSupportedException("Cannot clone a " + vClass.getName() + " object");
             }
@@ -141,10 +149,22 @@ public class CloneableBean {
         return value;
     }
 
+	private static <T> T executeCloneMethod(T value, final String method,
+			final Class<?>[] paramsDef, final Object[] params, 
+			final Class<?> vClass) throws NoSuchMethodException,
+			IllegalAccessException, InvocationTargetException, CloneNotSupportedException {
+		final Method cloneMethod = vClass.getMethod(method, paramsDef);
+		if (Modifier.isPublic(cloneMethod.getModifiers())) {
+		    value = (T) cloneMethod.invoke(value, params);
+		} else {
+		    throw new CloneNotSupportedException("Cannot clone a " + value.getClass() + " object, clone() is not public");
+		}
+		return value;
+	}
+
     private static <T> T cloneArray(final T array) throws Exception {
         final Class<?> elementClass = array.getClass().getComponentType();
         final int length = Array.getLength(array);
-        @SuppressWarnings("unchecked")
         final T newArray = (T) Array.newInstance(elementClass, length);
         for (int i = 0; i < length; i++) {
             Array.set(newArray, i, doClone(Array.get(array, i)));
@@ -153,17 +173,16 @@ public class CloneableBean {
     }
 
     private static <T> Collection<T> cloneCollection(final Collection<T> collection) throws Exception {
-        @SuppressWarnings("unchecked")
-        final Collection<T> newCollection = newCollection(collection.getClass());
+        final Collection<T> newCollection = CloneableBean.<Collection<T>,T>newCollection(collection.getClass());
         for (final T item : collection) {
             newCollection.add(doClone(item));
         }
         return newCollection;
     }
 
-    private static <T extends Collection<E>, E> Collection<E> newCollection(Class<T> type)
+    private static <T extends Collection<E>, E> Collection<E> newCollection(Class<?> type)
         throws InstantiationException, IllegalAccessException {
-        Collection<E> collection;
+        Collection<E> collection = null;
         if (SortedSet.class.isAssignableFrom(type)) {
             collection = new TreeSet<E>();
         } else if (Set.class.isAssignableFrom(type)) {
@@ -171,14 +190,19 @@ public class CloneableBean {
         } else if (List.class.isAssignableFrom(type)) {
             collection = new ArrayList<E>();
         } else {
-            collection = type.newInstance();
+            try {
+				collection = (Collection<E>) type.getDeclaredConstructor().newInstance();
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
+				LOG.error("Error", e);
+				collection = new ArrayList<E>();
+			}
         }
         return collection;
     }
 
     private static <K, V> Map<K, V> cloneMap(final Map<K, V> map) throws Exception {
-        @SuppressWarnings("unchecked")
-        final Map<K, V> newMap = newMap(map.getClass());
+        final Map<K, V> newMap = CloneableBean.<Map<K,V>,K,V>newMap(map.getClass());
         for (final Entry<K, V> entry : map.entrySet()) {
             final K clonedKey = doClone(entry.getKey());
             final V clonedValue = doClone(entry.getValue());
@@ -187,7 +211,7 @@ public class CloneableBean {
         return newMap;
     }
 
-    private static <T extends Map<K, V>, K, V> Map<K, V> newMap(Class<T> type)
+    private static <T extends Map<K, V>, K, V> Map<K, V> newMap(Class<?> type)
         throws InstantiationException, IllegalAccessException {
         Map<K, V> map;
         if (SortedMap.class.isAssignableFrom(type)) {
