@@ -20,10 +20,8 @@ import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 
-import org.jdom2.Attribute;
-import org.jdom2.DataConversionException;
-import org.jdom2.Element;
-import org.jdom2.filter.AbstractFilter;
+import org.w3c.dom.Attr;
+import org.w3c.dom.Element;
 
 import com.rometools.modules.sse.modules.Conflict;
 import com.rometools.modules.sse.modules.Conflicts;
@@ -35,6 +33,7 @@ import com.rometools.modules.sse.modules.Sync;
 import com.rometools.modules.sse.modules.Update;
 import com.rometools.rome.feed.module.Module;
 import com.rometools.rome.feed.rss.Item;
+import com.rometools.rome.io.ChildNavigator;
 import com.rometools.rome.io.DelegatingModuleParser;
 import com.rometools.rome.io.WireFeedParser;
 import com.rometools.rome.io.impl.DateParser;
@@ -43,7 +42,7 @@ import com.rometools.rome.io.impl.RSS20Parser;
 /**
  * Parses embedded SSE content from RSS channel and item content.
  */
-public class SSE091Parser implements DelegatingModuleParser {
+public class SSE091Parser extends ChildNavigator implements DelegatingModuleParser {
 
     // root of the sharing element
     private RSS20Parser rssParser;
@@ -64,7 +63,7 @@ public class SSE091Parser implements DelegatingModuleParser {
     @Override
     public Module parse(final Element element, final Locale locale) {
         SSEModule sseModule = null;
-        final String name = element.getName();
+        final String name = element.getLocalName();
 
         if (name.equals("rss")) {
             sseModule = parseSharing(element, locale);
@@ -78,7 +77,7 @@ public class SSE091Parser implements DelegatingModuleParser {
         final Element root = getRoot(element);
 
         Sharing sharing = null;
-        final Element sharingChild = root.getChild(Sharing.NAME, SSEModule.SSE_NS);
+        final Element sharingChild = super.getChild(root, Sharing.NAME, SSEModule.SSE_NS);
         if (sharingChild != null) {
             sharing = new Sharing();
             sharing.setOrdered(parseBooleanAttr(sharingChild, Sharing.ORDERED_ATTRIBUTE));
@@ -94,7 +93,7 @@ public class SSE091Parser implements DelegatingModuleParser {
 
     private void parseRelated(final Element root, final Sharing sharing, final Locale locale) {
         Related related;
-        final Element relatedChild = root.getChild(Related.NAME, SSEModule.SSE_NS);
+        final Element relatedChild = super.getChild(root, Related.NAME, SSEModule.SSE_NS);
         if (relatedChild != null) {
             related = new Related();
             // TODO; is this an attribute?
@@ -109,7 +108,7 @@ public class SSE091Parser implements DelegatingModuleParser {
 
     private Sync parseSync(final Element element, final Locale locale) {
         // Now I am going to get the item specific tags
-        final Element syncChild = element.getChild(Sync.NAME, SSEModule.SSE_NS);
+        final Element syncChild = super.getChild(element, Sync.NAME, SSEModule.SSE_NS);
         Sync sync = null;
 
         if (syncChild != null) {
@@ -127,9 +126,9 @@ public class SSE091Parser implements DelegatingModuleParser {
     private List<Conflict> parseConflicts(final Element syncElement, final Locale locale) {
         List<Conflict> conflicts = null;
 
-        final List<Element> conflictsContent = syncElement.getContent(new ContentFilter(Conflicts.NAME));
+        final List<Element> conflictsContent = super.getChildren(syncElement, Conflicts.NAME);
         for (final Element conflictsElement : conflictsContent) {
-            final List<Element> conflictContent = conflictsElement.getContent(new ContentFilter(Conflict.NAME));
+            final List<Element> conflictContent = super.getChildren(conflictsElement, Conflict.NAME);
             for (final Element element : conflictContent) {
                 final Element conflictElement = element;
 
@@ -138,7 +137,7 @@ public class SSE091Parser implements DelegatingModuleParser {
                 conflict.setWhen(parseDateAttribute(conflictElement, Conflict.WHEN_ATTRIBUTE, locale));
                 conflict.setVersion(parseIntegerAttribute(conflictElement, Conflict.VERSION_ATTRIBUTE));
 
-                final List<Element> conflictItemContent = conflictElement.getContent(new ContentFilter("item"));
+                final List<Element> conflictItemContent = super.getChildren(conflictElement, "item");
                 for (final Element element2 : conflictItemContent) {
                     final Element conflictItemElement = element2;
                     final Element root = getRoot(conflictItemElement);
@@ -160,8 +159,8 @@ public class SSE091Parser implements DelegatingModuleParser {
         // reach up to grab the sharing element out of the root
         Element root = start;
 
-        while (root.getParent() != null && root.getParent() instanceof Element) {
-            root = (Element) root.getParent();
+        while (root.getParentNode() != null && root.getParentNode() instanceof Element) {
+            root = (Element) root.getParentNode();
         }
         return root;
     }
@@ -180,7 +179,7 @@ public class SSE091Parser implements DelegatingModuleParser {
     }
 
     private Element getFirstContent(final Element element, final String name) {
-        final List<Element> filterList = element.getContent(new ContentFilter(name));
+        final List<Element> filterList = super.getChildren(element, name);
         Element firstContent = null;
         if (filterList != null && !filterList.isEmpty()) {
             firstContent = filterList.get(0);
@@ -189,7 +188,7 @@ public class SSE091Parser implements DelegatingModuleParser {
     }
 
     private void parseUpdates(final Element historyChild, final History history, final Locale locale) {
-        final List<Element> updatedChildren = historyChild.getContent(new ContentFilter(Update.NAME));
+        final List<Element> updatedChildren = super.getChildren(historyChild, Update.NAME);
         for (final Element updateChild : updatedChildren) {
             final Update update = new Update();
             update.setBy(parseStringAttribute(updateChild, Update.BY_ATTRIBUTE));
@@ -199,38 +198,30 @@ public class SSE091Parser implements DelegatingModuleParser {
     }
 
     private String parseStringAttribute(final Element syncChild, final String attrName) {
-        final Attribute idAttribute = syncChild.getAttribute(attrName);
+        final Attr idAttribute = syncChild.getAttributeNode(attrName);
         return idAttribute != null ? idAttribute.getValue().trim() : null;
     }
 
     private Integer parseIntegerAttribute(final Element sharingChild, final String attrName) {
-        final Attribute integerAttribute = sharingChild.getAttribute(attrName);
+        final Attr integerAttribute = sharingChild.getAttributeNode(attrName);
         Integer integerAttr = null;
         if (integerAttribute != null) {
-            try {
-                integerAttr = new Integer(integerAttribute.getIntValue());
-            } catch (final DataConversionException e) {
-                // dont use the data
-            }
+            integerAttr = Integer.valueOf(integerAttribute.getValue());
         }
         return integerAttr;
     }
 
     private Boolean parseBooleanAttr(final Element sharingChild, final String attrName) {
-        final Attribute attribute = sharingChild.getAttribute(attrName);
+        final Attr attribute = sharingChild.getAttributeNode(attrName);
         Boolean attrValue = null;
         if (attribute != null) {
-            try {
-                attrValue = Boolean.valueOf(attribute.getBooleanValue());
-            } catch (final DataConversionException e) {
-                // dont use the data
-            }
+            attrValue = Boolean.valueOf(attribute.getTextContent());
         }
         return attrValue;
     }
 
     private Date parseDateAttribute(final Element childElement, final String attrName, final Locale locale) {
-        final Attribute dateAttribute = childElement.getAttribute(attrName);
+        final Attr dateAttribute = childElement.getAttributeNode(attrName);
         final Date date = null;
         if (dateAttribute != null) {
             // SSE spec requires the timezone to be 'GMT'
@@ -239,27 +230,6 @@ public class SSE091Parser implements DelegatingModuleParser {
             return DateParser.parseRFC822(dateAttr, locale);
         }
         return date;
-    }
-
-    private static class ContentFilter extends AbstractFilter<Element> {
-        private static final long serialVersionUID = 1L;
-        private final String name;
-
-        private ContentFilter(final String name) {
-            this.name = name;
-        }
-
-        @Override
-        public Element filter(final Object content) {
-            final Element returnValue;
-            if (content instanceof Element && name.equals(((Element) content).getName())) {
-                returnValue = (Element) content;
-            } else {
-                returnValue = null;
-            }
-            return returnValue;
-        }
-
     }
 
 }
